# Utilities

./: .gitignore  Allocator.hpp  CMakeLists.txt  Events.cpp  Events.hpp  FileIO.cpp  LICENSE  README.md  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp  app.cpp  app_debug_draw.cpp  app_debug_draw.hpp  app_debug_overlay.cpp  app_game.cpp  app_game_kernels.hpp  app_gfx_demo.cpp  app_include.cpp  app_include.hpp  app_interface.hpp  app_main.cpp  app_renderer.cpp  app_renderer.hpp  app_scene_demo.cpp  app_scene_kernels.hpp  app_state.hpp  app_tests.cpp  app_tests.hpp  app_ui_panels.cpp  app_world.cpp  app_world_kernels.hpp  build.sh  host_runtime.cpp  imgui.ini  main.cpp  main.mm  sob.c
Allocator/: Allocator.cpp
Events/: Events.cpp  Events.hpp
FileIO/: FileIO.hpp
JobSystem/: Counter.cpp  Counter.hpp  Fiber.cpp  Fiber.hpp  Job.cpp  Job.hpp  JobList.cpp  JobList.hpp  JobQueue.cpp  JobQueue.hpp  JobSystemTypes.hpp  Manager.cpp  Manager.hpp  ManagerJobs.cpp  Thread.cpp  Thread.hpp  ThreadLocalStorage.hpp
JobSystem/helper/: Delegate.hpp  FunctionChecks.hpp  MPMCBoundedQueue.hpp
Logger/: Logger.hpp
Queue/: Queue.hpp
RNG/: Random.cpp  Random.hpp
String/: string.hpp  utils_string.h
ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
Timer/: Timer.cpp
Utilities/: Utilities.cpp  Utilities.hpp
Utils/: allocator.h  atomic.asm  atomic.h  cpuid.h  logger.h  mutex.asm  mutex.h  shared_ptr.h  time.h  typedefs.hpp  unique_ptr.h  utils_helper.cpp  utils_helpers.h  utils_iostream.h  utils_macros.h  utils_memory.h  utils_memory_functions.h  utils_ptr.h  utils_simd_copy.h  utils_type_ops.h  vadefs.hpp  windowsdefs.h
Vector/: Vector.hpp  vector.hpp
app/: app_camera.cpp  app_camera.hpp  app_scene_radiance_2d.cpp  app_scene_sponza.cpp
app/assets/: asset_formats.hpp
app/assets/cooked/: Avocado.umdl  Avocado.umsh  Avocado_tex0.utex  Duck.umdl  Duck.umsh  Duck.utex  Lantern.umdl  ambience.uaud  click.uaud  jump.uaud  land.uaud
app/shaders/: demo.slang  demo_compute.metal  demo_compute_vk.comp  demo_shader_support.slang  draw2d.slang  gfx_shader_abi.slang  shader_manifest.h  shader_records.generated.hpp  shader_records.metadef  text.slang  triangle.metal  triangle_vk.frag  triangle_vk.vert  world.slang  world_cull.slang
app/textures/: demo.ppm
cooker/: cooker_audio.hpp  cooker_main.cpp  cooker_math.hpp
documents/: text_rendering_research_and_plan.md
engine/: engine.cpp  engine.hpp  engine_assets.cpp  engine_assets.hpp  engine_debug_draw.cpp  engine_debug_draw.hpp  engine_include.hpp  engine_interface.hpp  engine_panels.cpp  engine_renderer.cpp  engine_renderer.hpp  engine_sim.cpp  engine_sim.hpp  engine_state.hpp  engine_world.cpp  engine_world_kernels.hpp
engine/shaders/: gfx_shader_abi.slang  shader_manifest.h  shader_records.generated.hpp  shader_records.metadef  world.slang
host/: host_runtime.cpp  main.cpp
meta/: build_meta.sh  generator.cpp  generator.hpp  lexer.cpp  lexer.hpp  meta_main.cpp  parser.cpp  parser.hpp
meta/nstl/base/: base_arena.cpp  base_arena.hpp  base_core.hpp  base_include.cpp  base_include.hpp  base_platform.hpp  base_spmd.cpp  base_spmd.hpp  base_string.cpp  base_string.hpp  base_typedefs.hpp
meta/nstl/os/: os_include.cpp  os_include.hpp
nstl/: JobSystem.cpp  JobSystem.h  assert.h  atomic.h  cache.h  function.h  memory.h  platform.h  thread.h  typedefs.h  typetraits.h  vector.h
nstl/Posix/: thread.cpp
nstl/artifact/: artifact.cpp  artifact.hpp  artifact_include.cpp  artifact_include.hpp
nstl/audio/: audio.cpp  audio.hpp  audio_include.cpp  audio_include.hpp  audio_mixer.hpp
nstl/base/: base_arena.cpp  base_arena.hpp  base_core.cpp  base_core.hpp  base_entry_point.cpp  base_entry_point.hpp  base_include.cpp  base_include.hpp  base_job_system.cpp  base_job_system.hpp  base_log.cpp  base_log.hpp  base_math.cpp  base_math.hpp  base_platform.hpp  base_profiling.cpp  base_profiling.hpp  base_random.cpp  base_random.hpp  base_slot_map.cpp  base_slot_map.hpp  base_spmc.cpp  base_spmc.hpp  base_string.cpp  base_string.hpp  base_threading.cpp  base_threading.hpp  base_typedefs.hpp
nstl/content/: content.cpp  content.hpp  content_include.cpp  content_include.hpp
nstl/core/: assert.cpp  assert.h  memcpy.h
nstl/draw2d/: draw2d.cpp  draw2d.hpp  draw2d_include.cpp  draw2d_include.hpp
nstl/file_stream/: file_stream.cpp  file_stream.hpp  file_stream_include.cpp  file_stream_include.hpp
nstl/gfx/: gfx.hpp  gfx_common.cpp  gfx_include.cpp  gfx_include.hpp
nstl/gfx/metal/: gfx_metal.mm
nstl/gfx/vulkan/: gfx_vulkan.cpp  gfx_vulkan_include.hpp
nstl/job_system/: job_system.cpp  job_system.hpp
nstl/math/: math.h
nstl/os/: os_include.cpp  os_include.h  os_include.hpp
nstl/os/audio/: os_audio.hpp
nstl/os/core/: arenaAllocator.h  assert.h  core.h  memcpy.h  memset.h  os_core.cpp  os_core.hpp  poolAllocator.h
nstl/os/graphics/: os_graphics.generated.hpp  os_graphics.hpp  os_graphics.metadef
nstl/prof/: prof.cpp  prof.hpp  prof_include.cpp  prof_include.hpp
nstl/renderer/: image_loader.cpp  mesh_loader_cgltf.cpp  renderer.cpp  renderer.hpp  renderer_include.cpp  renderer_include.hpp
nstl/renderer/vulkan/: vkdefer.h  (+11 more)
nstl/spmc/: spmc.cpp  spmc.hpp
nstl/text/: text.cpp  text.hpp  text_include.cpp  text_include.hpp
nstl/thread_pool/: thread_pool.cpp  thread_pool.hpp
nstl/ui/: ui.cpp  ui.hpp  ui_include.cpp  ui_include.hpp
projects/demo/: demo.cpp  demo_assets.h  demo_game.cpp  demo_game_kernels.hpp  demo_main.cpp  demo_panels.cpp  demo_scene.cpp  demo_scene_kernels.hpp  demo_state.hpp
projects/hello/: hello.cpp  hello_main.cpp  hello_state.hpp
shaders/: gradient.comp.hlsl  gradient.comp.spv  mesh.frag.hlsl  mesh.frag.spv  mesh.vert.hlsl  mesh.vert.spv  radiance2d_cascade.comp.hlsl  radiance2d_cascade.comp.spv  radiance2d_resolve.comp.hlsl  radiance2d_resolve.comp.spv  shadow.vert.hlsl  shadow.vert.spv
tests/: test_addressing.cpp  test_audio.cpp  test_base.cpp  test_collision.cpp  test_frustum_cull.cpp  test_game.cpp  test_gfx_upload.cpp  test_main.cpp  test_math.cpp  test_ordering.cpp  test_text_ui.cpp  test_winding.cpp
(+16 files in other folders)
